@@ -130,7 +130,6 @@
     "print_classes"
     "print_codesetup"
     "print_commands"
-    "print_configs"
     "print_context"
     "print_defn_rules"
     "print_dependencies"
@@ -141,6 +140,7 @@
     "print_locale"
     "print_locales"
     "print_methods"
+    "print_options"
     "print_rules"
     "print_simpset"
     "print_statement"
@@ -299,7 +299,6 @@
     "print_classes"
     "print_codesetup"
     "print_commands"
-    "print_configs"
     "print_context"
     "print_defn_rules"
     "print_dependencies"
@@ -310,6 +309,7 @@
     "print_locale"
     "print_locales"
     "print_methods"
+    "print_options"
     "print_rules"
     "print_simpset"
     "print_statement"
