@@ -184,7 +184,6 @@
     "print_coercion_maps"
     "print_coercions"
     "print_commands"
-    "print_configs"
     "print_context"
     "print_defn_rules"
     "print_dependencies"
@@ -196,6 +195,7 @@
     "print_locale"
     "print_locales"
     "print_methods"
+    "print_options"
     "print_orders"
     "print_quotconsts"
     "print_quotients"
@@ -408,7 +408,6 @@
     "print_coercion_maps"
     "print_coercions"
     "print_commands"
-    "print_configs"
     "print_context"
     "print_defn_rules"
     "print_dependencies"
@@ -420,6 +419,7 @@
     "print_locale"
     "print_locales"
     "print_methods"
+    "print_options"
     "print_orders"
     "print_quotconsts"
     "print_quotients"
