@@ -12,6 +12,9 @@ Config.get in Isabelle/ML), and attribute in Isabelle/Isar.  Minor
 INCOMPATIBILITY, need to use more official Isabelle means to access
 quick_and_dirty, instead of historical poking into mutable reference.
 
+* Renamed command 'print_configs' to 'print_options'.  Minor
+INCOMPATIBILITY.
+
 * Sessions may be organized via 'chapter' specifications in the ROOT
 file, which determines a two-level hierarchy of browser info.  The old
 tree-like organization via implicit sub-session relation, with its
